Bug 34324 - EasyHack: Formula icon in quickstarter menu looks inconsistent.
Summary: EasyHack: Formula icon in quickstarter menu looks inconsistent.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
3.3.1 RC1
Hardware: Other Linux (All)
: medium normal
Assignee: Petr Mladek
URL:
Whiteboard: target:3.6.0 target:3.5.3
Keywords: easyHack, topicUI
Depends on:
Blocks:
 
Reported: 2011-02-16 00:34 UTC by Yifan Jiang
Modified: 2015-12-16 05:33 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
scenario snapshot (85.93 KB, image/png)
2011-02-16 00:34 UTC, Yifan Jiang
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yifan Jiang 2011-02-16 00:34:10 UTC
Created attachment 43419 [details]
scenario snapshot

Platform: SLED 11 sp1 i586
build info: LibreOffice 3.3.1 rc1

[Steps]

    The formula icon in quickstarter menu appears dark blue which is neither
    consistent with other icons nor with its counterpart in the splash screen.

    Please see the snapshot for details.
Comment 1 Christoph 2011-02-28 13:17:48 UTC
Steps to reproduce this issue, since Gnome usually ships with disabled menu icons. According a mail on the German list (see [1]):

- If GNOME 2.28 or later is used, it must first of all
gconf-editor to be started. Here you will change to
/ desktop / gnome / interface / buttons_have_icons
/ desktop / gnome / interface / menus_have_icons
and both values set to "true"
- Now enable libre office in the quick-starter. Here are now all the icons up on Math correctly. The Math icon is completely in a strange colored blue.
- Here, if you want to remove the icons in the menu again, you can take the
above values set back to false.

[1] http://www.mail-archive.com/discuss@de.libreoffice.org/msg03816.html
Comment 2 Don't use this account, use tml@iki.fi 2011-03-07 05:40:53 UTC
Perhaps for Petr?
Comment 3 Petr Mladek 2011-03-21 09:56:59 UTC
We need to find the problematic icon in the sources and ask the author to provide the right one.

I am not sure how to find it effectively. One solution would be to find it the artwork git repository via the name. If it is not easy to find it, the related code is libs-core/sfx2/source/appl/shutdownicon*

I nominate it as an easy hack.
Comment 4 Rainer Bielefeld Retired 2011-05-12 02:41:33 UTC
NOT reproducible with "LibreOffice 3.4Beta4  – WIN7  Home Premium  (64bit) German UI [DEV300m103 (Build:4)]" my quickstarter Math icon has white background as allother ones. So I change OS to Linux for now.
Comment 5 Not Assigned 2012-03-26 03:17:06 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b36a42fb831b853120928e05dcf322898a92a731

fdo#34324 put 16x16 math icon in RGB color space
Comment 6 Not Assigned 2012-04-02 12:29:24 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8fa3aae7b302d3c9846bfa352c1db619a5b05ca0

fdo#34324 - fix colorspace conversion for greyscale bitmaps
Comment 7 Not Assigned 2012-04-02 13:10:34 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=33894f76b4555e2261cd723fd5fc93998b42aae1&g=libreoffice-3-5

fdo#34324 - fix colorspace conversion for greyscale bitmaps


It will be available in LibreOffice 3.5.3.
Comment 8 Robinson Tryon (qubit) 2015-12-16 05:33:29 UTC
Migrating Whiteboard tags to Keywords: (EasyHack TopicUi)
[NinjaEdit]