fdo#34324 - fix colorspace conversion for greyscale bitmaps

Signed-off-by: Andras Timar <timar74@gmail.com>